--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ input:-webkit-autofill {
 
 .video {
      position: absolute;
-     opacity: 0.3;
+     opacity: 0.7;
      object-fit: cover;
      width: 100%;
      height: 100%;
@@ -178,7 +178,10 @@ input:-webkit-autofill {
 }
 
 .index-btn {
-     padding: 1rem 2rem;
+     /* padding: 1rem 2rem; */
+     width: 10rem;
+     padding: 1rem 0;
+     text-align: center;
      font-weight: bold;
      font-size: 0.85rem;
      border: 0;
