--- a/css/main.css
+++ b/css/main.css
@@ -92,28 +92,56 @@
 }
 
 input:-webkit-autofill {
-     -webkit-box-shadow: 0 0 0 10rem #131313 inset;
+     -webkit-box-shadow: 0 0 0 10rem #353535 inset;
      -webkit-text-fill-color: #fff !important;
 
 }
 
+.form_link-forgot {
+     padding: 0.8rem 2rem;
+     font-weight: bold;
+     font-size: 1rem;
+     border: 0;
+     margin: 1.2rem 0 0 0;
+     border-radius: 5px;
+     color: #6d6d6d;
+     align-self: center;
+     transition: background-color 0.2s ease, color 0.3s ease;
+     -webkit-transition: background-color 0.2s ease, color 0.3s ease;
+     -moz-transition: background-color 0.2s ease, color 0.3s ease;
+     -ms-transition: background-color 0.2s ease, color 0.3s ease;
+     -o-transition: background-color 0.2s ease, color 0.3s ease;
+}
+
+.form_link-forgot:hover {
+     color: #FEFEFE;
+}
+
 .form_link {
-     text-align: center;
-     color: #57585c;
-     font-size: 18px;
-     font-family: 'Mono Space', monospace;
-     margin-top: 20px;
-     padding: 12px 20px;
-     font-weight: 600;
-     transition: color 0.2s ease;
-     -webkit-transition: color 0.2s ease;
-     -moz-transition: color 0.2s ease;
-     -ms-transition: color 0.2s ease;
-     -o-transition: color 0.2s ease;
+     padding: 1rem 2rem;
+     font-weight: bold;
+     font-size: 0.85rem;
+     border: 0;
+     margin: 1.2rem 0 0 0;
+     background: #191919;
+     border-radius: 5px;
+     color: #FEFEFE;
+     align-self: center;
+     transition: background-color 0.2s ease, color 0.3s ease;
+     -webkit-transition: background-color 0.2s ease, color 0.3s ease;
+     -moz-transition: background-color 0.2s ease, color 0.3s ease;
+     -ms-transition: background-color 0.2s ease, color 0.3s ease;
+     -o-transition: background-color 0.2s ease, color 0.3s ease;
 }
 
 .form_link:hover {
-     color: #234afc;
+     color: #fff;
+     background-color: #202020;
+}
+
+.form_item_buttons {
+     display: flex;
+     flex-direction: row;
 }
 
 .form__placeholder {
@@ -166,6 +194,17 @@ input:-webkit-autofill {
      width: 100%;
      height: 100%;
 }
+
+#emailSpan {
+     color: white;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+     -webkit-appearance: none;
+     margin: 0;
+}
+
 
 .welcome-text {
      color: #fff;
