--- a/Frontend/css/base.css
+++ b/Frontend/css/base.css
@@ -163,7 +163,7 @@ button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-     -webkit-appearance: button;
+     appearance: button;
      cursor: pointer;
 }
 
@@ -179,7 +179,7 @@ input[type="radio"] {
 }
 
 input[type="search"] {
-     -webkit-appearance: textfield;
+     appearance: textfield;
      -moz-box-sizing: content-box;
      -webkit-box-sizing: content-box;
      box-sizing: content-box;
