--- a/Frontend/css/home.css
+++ b/Frontend/css/home.css
@@ -130,7 +130,6 @@ main {
 
 .play {
      grid-area: play;
-     font-size: 15vw;
      align-self: center;
      justify-self: center;
      cursor: default;
@@ -211,8 +210,7 @@ main {
 }
 
 
-/* Style class utilities */
-.oh {
+Style class utilities .oh {
      overflow: hidden;
 }
 
@@ -228,129 +226,238 @@ main {
 
 
 .css-typing p {
-  border-right: .15em solid orange;
-  font-family: "Courier";
-  font-size: 14px;
-  white-space: nowrap;
-  overflow: hidden;
+     border-right: .15em solid orange;
+     font-family: "Courier";
+     font-size: 14px;
+     white-space: nowrap;
+     overflow: hidden;
 }
+
 .css-typing p:nth-child(1) {
-  width: 7.3em;
-  -webkit-animation: type 2s steps(40, end);
-  animation: type 2s steps(40, end);
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
+     width: 7.3em;
+     -webkit-animation: type 2s steps(40, end);
+     animation: type 2s steps(40, end);
+     -webkit-animation-fill-mode: forwards;
+     animation-fill-mode: forwards;
 }
 
 .css-typing p:nth-child(2) {
-  width: 11.5em;
-  opacity: 0;
-  -webkit-animation: type2 2s steps(40, end);
-  animation: type2 2s steps(40, end);
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
+     width: 11.5em;
+     opacity: 0;
+     -webkit-animation: type2 2s steps(40, end);
+     animation: type2 2s steps(40, end);
+     -webkit-animation-delay: 2s;
+     animation-delay: 2s;
+     -webkit-animation-fill-mode: forwards;
+     animation-fill-mode: forwards;
 }
 
 .css-typing p:nth-child(3) {
-  width: 7.3em;
-  opacity: 0;
-  -webkit-animation: type3 5s steps(20, end), blink .5s step-end infinite alternate;
-  animation: type3 5s steps(20, end), blink .5s step-end infinite alternate;
-  -webkit-animation-delay: 4s;
-  animation-delay: 4s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
+     width: 7.3em;
+     opacity: 0;
+     -webkit-animation: type3 5s steps(20, end), blink .5s step-end infinite alternate;
+     animation: type3 5s steps(20, end), blink .5s step-end infinite alternate;
+     -webkit-animation-delay: 4s;
+     animation-delay: 4s;
+     -webkit-animation-fill-mode: forwards;
+     animation-fill-mode: forwards;
 }
 
 @keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    border: none;
-  }
+     0% {
+          width: 0;
+     }
+
+     99.9% {
+          border-right: .15em solid orange;
+     }
+
+     100% {
+          border: none;
+     }
 }
 
 @-webkit-keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    border: none;
-  }
+     0% {
+          width: 0;
+     }
+
+     99.9% {
+          border-right: .15em solid orange;
+     }
+
+     100% {
+          border: none;
+     }
 }
 
 @keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
+     0% {
+          width: 0;
+     }
+
+     1% {
+          opacity: 1;
+     }
+
+     99.9% {
+          border-right: .15em solid orange;
+     }
+
+     100% {
+          opacity: 1;
+          border: none;
+     }
 }
 
 @-webkit-keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
+     0% {
+          width: 0;
+     }
+
+     1% {
+          opacity: 1;
+     }
+
+     99.9% {
+          border-right: .15em solid orange;
+     }
+
+     100% {
+          opacity: 1;
+          border: none;
+     }
 }
 
 @keyframes type3 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
+     0% {
+          width: 0;
+     }
+
+     1% {
+          opacity: 1;
+     }
+
+     100% {
+          opacity: 1;
+     }
 }
 
 @-webkit-keyframes type3 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
+     0% {
+          width: 0;
+     }
+
+     1% {
+          opacity: 1;
+     }
+
+     100% {
+          opacity: 1;
+     }
 }
 
 @keyframes blink {
-  50% {
-    border-color: transparent;
-  }
+     50% {
+          border-color: transparent;
+     }
 }
+
 @-webkit-keyframes blink {
-  50% {
-    border-color: tranparent;
-  }
+     50% {
+          border-color: tranparent;
+     }
+}
+
+/*Button Fenrir*/
+
+.button {
+     pointer-events: auto;
+     cursor: pointer;
+     background: #ff5e5e;
+     border: none;
+     /* padding: 1.5rem 3rem; */
+     margin: 0;
+     font-family: inherit;
+     font-size: inherit;
+     position: relative;
+     display: inline-block;
+}
+
+.button::before,
+.button::after {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+}
+
+.button--fenrir:hover {
+     transform: scale(1.05);
+     -webkit-transform: scale(1.05);
+     -moz-transform: scale(1.05);
+     -ms-transform: scale(1.05);
+     -o-transform: scale(1.05);
+}
+
+
+.button--fenrir {
+     background: #fff;
+     padding: 0;
+     -webkit-clip-path: circle(50% at 50% 50%);
+     clip-path: circle(50% at 50% 50%);
+     width: 150px;
+     height: 150px;
+     font-family: 'Mono Space', monospace;
+     font-weight: 500;
+     text-transform: lowercase;
+     font-size: 1.85rem;
+     color: #000000;
+     transition: transform 0.3s ease;
+     -webkit-transition: transform 0.3s ease;
+     -moz-transition: transform 0.3s ease;
+     -ms-transition: transform 0.3s ease;
+     -o-transition: transform 0.3s ease;
+}
+
+.progress {
+     position: absolute;
+     width: 110px;
+     height: 110px;
+     top: calc(50% - 55px);
+     left: calc(50% - 55px);
+     transition: transform 0.4s cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.button--fenrir:hover .progress {
+     transform: scale3d(1.2, 1.2, 1);
+}
+
+.progress__circle,
+.progress__path {
+     fill: none;
+     stroke: #ffffff;
+     stroke-width: 1px;
+}
+
+.button--fenrir:focus-visible .progress__circle {
+     fill: rgba(148, 148, 148, 0.4);
+}
+
+
+
+.progress__path {
+     stroke: #000000;
+     stroke-dasharray: 1;
+     stroke-dashoffset: 1;
+     transition: stroke-dashoffset 0.4s cubic-bezier(0.7, 0, 0.3, 1);
+     -webkit-transition: stroke-dashoffset 0.4s cubic-bezier(0.7, 0, 0.3, 1);
+     -moz-transition: stroke-dashoffset 0.4s cubic-bezier(0.7, 0, 0.3, 1);
+     -ms-transition: stroke-dashoffset 0.4s cubic-bezier(0.7, 0, 0.3, 1);
+     -o-transition: stroke-dashoffset 0.4s cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.button--fenrir:hover .progress__path {
+     stroke-dashoffset: 0;
 }
