--- a/css/captioning.css
+++ b/css/captioning.css
@@ -2,9 +2,9 @@ body {
      margin: 0;
      display: flex;
      justify-content: center;
-     align-items: center;
      height: 100vh;
      background-color: #040404;
+     position: relative;
 }
 
 ::selection {
@@ -12,8 +12,29 @@ body {
      color: #000;
 }
 
+a {
+     cursor: pointer;
+}
+
+main {
+     margin-top: 50px;
+}
+
 input[type="file"] {
      display: none;
+}
+
+.header {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     margin-bottom: 30px;
+}
+
+.title {
+     color: #fff;
+     font-size: 2rem;
 }
 
 .upload-container {
@@ -170,4 +191,96 @@ input[type="file"] {
 
 .copy-text:hover {
      color: #ffffff;
+}
+
+p {
+     margin: 0;
+     color: #fff;
+}
+
+.back-home-div {
+     display: flex;
+     justify-content: center;
+     justify-content: space-between;
+     margin-top: 30px;
+     gap: 20px;
+}
+
+.clear {
+     color: #CF4A4A;
+}
+
+.clear:hover {
+     color: #aa3131;
+}
+
+.back-home {
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     gap: 15px;
+     text-decoration: none;
+}
+
+.back-arrow {
+     background-color: transparent;
+     padding-top: 1px;
+
+}
+
+.page-loader {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     background: #000000;
+     z-index: 1000;
+}
+
+.page-loader .txt {
+     color: #ffffff;
+     text-align: center;
+     top: 40%;
+     position: relative;
+     text-transform: lowercase;
+     letter-spacing: 0.3rem;
+     font-weight: normal;
+     line-height: 1.5;
+}
+
+.spinner {
+     position: relative;
+     top: 35%;
+     width: 80px;
+     height: 80px;
+     margin: 0 auto;
+     background-color: #fff;
+
+     border-radius: 100%;
+     -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
+     animation: sk-scaleout 1.0s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-scaleout {
+     0% {
+          -webkit-transform: scale(0)
+     }
+
+     100% {
+          -webkit-transform: scale(1.0);
+          opacity: 0;
+     }
+}
+
+@keyframes sk-scaleout {
+     0% {
+          -webkit-transform: scale(0);
+          transform: scale(0);
+     }
+
+     100% {
+          -webkit-transform: scale(1.0);
+          transform: scale(1.0);
+          opacity: 0;
+     }
 }
