--- a/css/captioning.css
+++ b/css/captioning.css
@@ -284,3 +284,280 @@ p {
           opacity: 0;
      }
 }
+
+
+
+.res-container {
+     width: 10px;
+     position: absoulte;
+     margin-bottom: 0;
+}
+
+.res-row {
+     display: -webkit-box;
+     /* OLD - iOS 6-, Safari 3.1-6 */
+     display: -moz-box;
+     /* OLD - Firefox 19 */
+     display: -ms-flexbox;
+     /* TWEENER - IE 10 */
+     display: -webkit-flex;
+     /* NEW - Chrome */
+     display: flex;
+     /* NEW - Opera 12.1, Firefox 20+ */
+}
+
+#box {
+     -webkit-box-flex: 1;
+     /* OLD - iOS 6-, Safari 3.1-6 */
+     -moz-box-flex: 1;
+     /* OLD - Firefox 19- */
+     -webkit-flex: 1;
+     /* Chrome */
+     -ms-flex: 1;
+     /* IE 10 */
+     flex: 1;
+     width: 100%;
+     /* Old syntax, otherwise collapses. */
+
+}
+
+/*...................*/
+#block-1 {
+     position: relative;
+     top: 0;
+     Bottom: 0;
+     left: 0;
+     right: 0;
+     background: #f6f6f6;
+     height: 100vh;
+     width: 100%;
+     margin-bottom: 0;
+     display: block;
+     animation-duration: 1s;
+     -webkit-animation-duration: 1s;
+     animation-iteration-count: 1;
+     animation-timing-function: ease;
+     -webkit-animation-timing-function: ease;
+}
+
+
+
+.b3 {
+     position: fixed;
+}
+
+/*****************/
+#loader-wrap {
+     display: -webkit-box;
+     display: -moz-box;
+     display: -ms-flexbox;
+     display: -webkit-flex;
+     display: flex;
+}
+
+#loading {
+     background-color: #000000;
+     height: 100%;
+     width: 100%;
+     position: fixed;
+     z-index: 2;
+     margin-top: 0px;
+     top: 0px;
+}
+
+/***************/
+#loading-center {
+     width: 100%;
+     height: 100%;
+     position: relative;
+}
+
+#loading-center-absolute {
+     position: absolute;
+     left: 26%;
+     top: 38%;
+     height: 200px;
+     width: 200px;
+     margin-top: -100px;
+     margin-left: -100px;
+}
+
+#object {
+     width: 200px;
+     height: 200px;
+     Background-image: url(https://reech.ca/wp-content/uploads/2017/09/reech-logo-no-text.svg);
+     background-repeat: no-repeat;
+     margin-right: auto;
+     margin-left: auto;
+     margin-top: 20px;
+}
+
+/***************************/
+
+#object {
+     animation: object .8s linear;
+     transform-origin: center center;
+}
+
+@keyframes object {
+     0% {
+          transform: scale(0);
+          opacity: 0
+     }
+
+     50% {
+          transform: scale(1.5);
+          opacity: 1
+     }
+
+     100% {
+          transform: scale(1);
+          opacity: 1
+     }
+}
+
+/*********loader line******************/
+#loader {
+     position: absolute;
+     top: 100%;
+     left: 50%;
+     margin-left: -50px;
+     width: 100px;
+     height: 3px;
+     overflow: hidden;
+}
+
+#loader:before,
+#loader:after {
+     content: '';
+     position: absolute;
+     top: 0;
+     width: 100%;
+     height: 3px;
+     transform: translate(-100%, 0);
+}
+
+#loader:before {
+     background-color: #262626;
+     animation: loading 3400ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+#loader:after {
+     background-color: #fff;
+     animation: loading 2500ms 500ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+@keyframes loading {
+     75% {
+          transform: translate(0, 0);
+     }
+
+     100% {
+          transform: translate(100%, 0);
+     }
+}
+
+
+/***********SLIDE DOWN***************/
+
+.slideDown {
+     bottom: 0 !important;
+     animation-direction: normal;
+     animation-fill-mode: forwards;
+     animation-iteration-count: 1;
+}
+
+.slideDown {
+     animation-name: slideDown;
+     -webkit-animation-name: slideDown;
+
+     animation-duration: 1s;
+     -webkit-animation-duration: 1s;
+     animation-iteration-count: 1;
+     animation-timing-function: ease;
+     -webkit-animation-timing-function: ease;
+     visibility: visible !important;
+}
+
+@keyframes slideDown {
+     from {
+          transform: translateY(0%);
+     }
+
+     to {
+          transform: translateY(100%);
+     }
+}
+
+@-webkit-keyframes slideDown {
+     from {
+          transform: translateY(0%);
+     }
+
+     to {
+          transform: translateY(100%);
+     }
+}
+
+/*********************/
+
+.slideInUp {
+     animation-name: slideInUp;
+     -webkit-animation-name: slideInUp;
+
+     animation-duration: 1s;
+     -webkit-animation-duration: 1s;
+     animation-iteration-count: 1;
+     animation-timing-function: ease-in;
+     -webkit-animation-timing-function: ease-in;
+     visibility: visible !important;
+}
+
+@keyframes slideInUp {
+     from {
+          transform: translateY(100%);
+     }
+
+     to {
+          transform: translateY(0%);
+     }
+}
+
+@-webkit-keyframes slideInUp {
+     from {
+          transform: translateY(100%);
+     }
+
+     to {
+          transform: translateY(0%);
+     }
+}
+
+@keyframes zoomOut {
+     from {
+          opacity: 1;
+     }
+
+     50% {
+          opacity: 0;
+          transform: scale3d(.3, .3, .3);
+     }
+
+     to {
+          opacity: 0;
+     }
+}
+
+.zoomOut {
+     animation-name: zoomOut;
+
+     animation-name: zoomOut;
+     -webkit-animation-name: zoomOut;
+
+     animation-duration: 2s;
+     -webkit-animation-duration: 2s;
+     animation-iteration-count: 2;
+     animation-timing-function: ease-in-out;
+     -webkit-animation-timing-function: ease-in-out;
+     visibility: visible !important;
+}
