--- a/css/captioning.css
+++ b/css/captioning.css
@@ -202,16 +202,15 @@ p {
      display: flex;
      justify-content: center;
      justify-content: space-between;
-     margin-top: 30px;
-     gap: 20px;
+     margin-bottom: 30px;
 }
 
 .clear {
-     color: #CF4A4A;
+     color: #aa3131;
 }
 
 .clear:hover {
-     color: #aa3131;
+     color: #e05454;
 }
 
 .back-home {
@@ -560,4 +559,47 @@ p {
      animation-timing-function: ease-in-out;
      -webkit-animation-timing-function: ease-in-out;
      visibility: visible !important;
+}
+
+
+/* Hide modal by default */
+.modal {
+     position: relative;
+     display: none;
+     position: fixed;
+     z-index: 1;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     overflow: auto;
+     background-color: rgba(0, 0, 0, 0.815);
+}
+
+/* Style modal content */
+/* Style modal content */
+.modal-content {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     display: block;
+     max-width: 80%;
+     max-height: 80%;
+}
+
+
+/* Close button */
+.close {
+     position: absolute;
+     top: 21%;
+     right: 30%;
+     color: #fff;
+     font-size: 40px;
+     cursor: pointer;
+}
+
+/* Image container style */
+.image-preview {
+     cursor: pointer;
 }
