--- a/css/captioning.css
+++ b/css/captioning.css
@@ -77,7 +77,7 @@ input[type="file"] {
      border: none;
      border-radius: 5px;
      cursor: pointer;
-     max-width: fit-content;
+     /* max-width: fit-content; */
      transition: background-color 0.3s;
 }
 
